--- a/index.html
+++ b/index.html
@@ -248,6 +248,29 @@
         </div>
       </section>
 
+      <!-- 動畫與事件 -->
+      <section class="container-fluid bg-orange py-3">
+        <h2 class="text-center text-darkOrange w-100 fw-bold">動畫與事件</h2>
+        <div
+          class="flex-wrap text-center top-20 w-100 d-flex justify-content-around"
+        >
+          <div class="p-3 col-lg-4 col-md-4 col-sm-12">
+            <p class="mb-1">動畫</p>
+            <p class="text-center">transition</p>
+            <a href="./20.transition.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
+          </div>
+          <div class="p-3 col-md-4 col-12">
+            <p class="mb-1">滑鼠事件</p>
+            <p class="text-center">Mouse Event</p>
+            <a href="./21.mouse-event.html" target="_blank">
+              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
+            </a>
+          </div>
+        </div>
+      </section>
+
       <!-- 基礎圖表 -->
       <section class="container pt-5">
         <h2 class="text-center text-darkOrange mb-4 fw-bold">基礎圖表</h2>
@@ -255,77 +278,77 @@
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">圓餅圖</p>
             <p>pie chart</p>
-            <a href="./20.pie-chart.html" target="_blank">
+            <a href="./22.pie-chart.html" target="_blank">
               <img class="w-80" src="./img/index/pie.png" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">甜甜圈圖</p>
             <p>donut chart</p>
-            <a href="./21.donut-chart.html" target="_blank">
+            <a href="./23.donut-chart.html" target="_blank">
               <img class="w-80" src="./img/index/donut-chart.png" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">散點圖</p>
             <p>scatter chart</p>
-            <a href="./22.scatter-chart.html" target="_blank">
+            <a href="./24.scatter-chart.html" target="_blank">
               <img class="w-80" src="./img/index/scatter-plot.png" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">氣泡圖</p>
             <p>bubble chart</p>
-            <a href="./23.bubble-chart.html" target="_blank">
+            <a href="./25.bubble-chart.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">長條圖</p>
             <p>bar chart</p>
-            <a href="./24.bar-chart.html" target="_blank">
+            <a href="./26.bar-chart.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">複數長條圖</p>
             <p>multiple bar chart</p>
-            <a href="./25.multiple-bar-chart.html" target="_blank">
+            <a href="./27.multiple-bar-chart.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">堆積長條圖</p>
             <p>stacked bar chart</p>
-            <a href="./26.stacked-bar-chart.html" target="_blank">
+            <a href="./28.stacked-bar-chart.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">折線圖</p>
             <p>line chart</p>
-            <a href="./27.line-chart.html" target="_blank">
+            <a href="./29.line-chart.html" target="_blank">
               <img class="w-80" src="./img/index/line-chart.jpg" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">多線折線圖</p>
             <p>multiple line chart</p>
-            <a href="./28.multiple-line-chart.html" target="_blank">
+            <a href="./30.multiple-line-chart.html" target="_blank">
               <img class="w-80" src="./img/index/multi-linechart.png" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">區域圖</p>
             <p>Area chart</p>
-            <a href="./29.area-chart.html" target="_blank">
+            <a href="./31.area-chart.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">多線區域圖</p>
             <p>multiple area chart</p>
-            <a href="./30.multiple-area-chart.html" target="_blank">
+            <a href="./32.multiple-area-chart.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
@@ -335,53 +358,37 @@
         </div>
       </section>
 
-      <!-- 動畫與互動效果 -->
+      <!-- 進階互動事件 -->
       <section class="container-fluid bg-orange py-3">
-        <h2 class="text-center text-darkOrange w-100 fw-bold">
-          動畫與互動效果
-        </h2>
+        <h2 class="text-center text-darkOrange w-100 fw-bold">進階互動事件</h2>
         <div
           class="flex-wrap text-center top-20 w-100 d-flex justify-content-around"
         >
-          <div class="p-3 col-lg-4 col-md-4 col-sm-12">
-            <p class="mb-1">動畫</p>
-            <p class="text-center">transition</p>
-            <a href="./31.transition.html" target="_blank">
-              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
-            </a>
-          </div>
-          <div class="p-3 col-md-4 col-12">
-            <p class="mb-1">滑鼠事件</p>
-            <p class="text-center">Mouse Event</p>
-            <a href="./32.mouse-event.html" target="_blank">
-              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
-            </a>
-          </div>
-          <div class="p-3 col-md-4 col-12">
+          <div class="p-3 col-md-3 col-12">
             <p class="mb-1">縮放</p>
             <p class="text-center">Zoom</p>
             <a href="./33.zoom.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
-          <div class="p-3 col-md-4 col-12">
+          <div class="p-3 col-md-3 col-12">
             <p class="mb-1">拖曳</p>
             <p class="text-center">Drag</p>
             <a href="./34.drag.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
-          <div class="p-3 col-md-4 col-12">
-            <p class="mb-1">原力</p>
-            <p class="text-center">Force</p>
-            <a href="./35.force.html" target="_blank">
+          <div class="p-3 col-md-3 col-12">
+            <p class="mb-1">選取刷</p>
+            <p class="text-center">Brush</p>
+            <a href="./35.brush.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
-          <div class="p-3 col-md-4 col-12">
-            <p class="mb-1">刷子</p>
-            <p class="text-center">Brush</p>
-            <a href="./36.brush.html" target="_blank">
+          <div class="p-3 col-md-3 col-12">
+            <p class="mb-1">原力</p>
+            <p class="text-center">Force</p>
+            <a href="./36.force.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
