--- a/34.drag.html
+++ b/34.drag.html
@@ -28,6 +28,19 @@
 
     <div class="container">
       <h3 class="mt-6 fw-bold">拖曳 Drag</h3>
+
+      <!--  -->
+      <div>
+        <h5 class="mt-5">
+          <mark>API</mark>
+        </h5>
+        <p class="mt-1 mb-1 fs-6">程式碼</p>
+        <pre>
+              <code class="language-js line-numbers remove-initial-line-feed">
+    
+              </code>
+            </pre>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
