--- a/33.zoom.html
+++ b/33.zoom.html
@@ -28,7 +28,20 @@
 
     <div class="container">
       <h3 class="mt-6 fw-bold">縮放 Zoom</h3>
+      <!--  -->
+      <div>
+        <h5 class="mt-5">
+          <mark>API</mark>
+        </h5>
+        <p class="mt-1 mb-1 fs-6">程式碼</p>
+        <pre>
+          <code class="language-js line-numbers remove-initial-line-feed">
+
+          </code>
+        </pre>
+      </div>
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
