--- a/20.transition.html
+++ b/20.transition.html
@@ -75,7 +75,7 @@
       <!-- transition -->
       <div>
         <h5 class="mt-5">
-          <mark>selection.transition( )</mark>
+          <mark>selection.transition([name])</mark>
         </h5>
         <div class="my-4">
           <svg
@@ -114,7 +114,7 @@
       <!-- duration -->
       <div>
         <h5 class="mt-5">
-          <mark>transition.duration( )</mark>
+          <mark>transition.duration([value])</mark>
         </h5>
         <div class="my-4">
           <svg
@@ -207,7 +207,7 @@
       <!-- delay -->
       <div>
         <h5 class="mt-5">
-          <mark>transition.delay( )</mark>
+          <mark>transition.delay([value])</mark>
         </h5>
         <div class="my-4">
           <svg class="delay" style="border: 1px solid rgb(103, 102, 102)"></svg>
@@ -258,7 +258,7 @@
       <!-- ease -->
       <div>
         <h5 class="mt-5">
-          <mark>transition.ease( )</mark>
+          <mark>transition.ease([value])</mark>
         </h5>
         <div class="my-4">
           <svg class="ease" style="border: 1px solid rgb(103, 102, 102)"></svg>
@@ -336,7 +336,7 @@
       <!-- transition.on 無限循環動畫 -->
       <div>
         <h5 class="mt-5">
-          <mark>transition.on( ) 無限循環動畫</mark>
+          <mark>transition.on(typenames[, listener]) 無限循環動畫</mark>
         </h5>
         <div class="my-4">
           <svg
