--- a/20.transition.html
+++ b/20.transition.html
@@ -467,7 +467,7 @@
         .attr("fill", "#f68b47")
         .attr("stroke", "#f68b47");
 
-      document.querySelector(".moveBtn").addEventListener("click", function () {
+      document.querySelector(".moveBtn").addEventListener("click", () => {
         moveRect.attr("transform", "translate(140, 60)");
       });
 
