--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
           <div class="p-3 col-md-4 col-12">
             <p class="mb-1">工具提示框 ToolTips</p>
             <p class="text-center">Mouse Event</p>
-            <a href="./21.mouse-event.html" target="_blank">
+            <a href="./22.tooltips.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
