--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
             </a>
           </div>
           <div class="p-3 col-md-4 col-12">
-            <p class="mb-1">工具提示框 ToolTips</p>
-            <p class="text-center">Mouse Event</p>
+            <p class="mb-1">工具提示框</p>
+            <p class="text-center">Tooltips</p>
             <a href="./22.tooltips.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
