--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <p class="bg-white bubble-md"></p>
         <p class="bubble-sm"></p>
         <h2 class="text-center text-darkOrange pt-3 w-100 fw-bold">
-          繪製形狀三大 Helper Functions
+          繪製形狀的三大 Helper Functions
         </h2>
         <div
           class="flex-wrap text-center top-20 w-100 d-flex justify-content-around"
