--- a/24.zoom.html
+++ b/24.zoom.html
@@ -28,11 +28,26 @@
 
     <div class="container">
       <h3 class="mt-6 fw-bold">縮放 Zoom</h3>
-      <!--  -->
+      <!-- 基本縮放 -->
       <div>
         <h5 class="mt-5">
-          <mark>API</mark>
+          <mark>基本縮放</mark>
         </h5>
+        <div class="zoomBasic"></div>
+        <p class="mt-1 mb-1 fs-6">程式碼</p>
+        <pre>
+          <code class="language-js line-numbers remove-initial-line-feed">
+
+          </code>
+        </pre>
+      </div>
+
+      <!-- 自行調整縮放大小 -->
+      <div>
+        <h5 class="mt-5">
+          <mark>自行調整縮放大小</mark>
+        </h5>
+        <div class="zoomAdjust"></div>
         <p class="mt-1 mb-1 fs-6">程式碼</p>
         <pre>
           <code class="language-js line-numbers remove-initial-line-feed">
@@ -49,6 +64,112 @@
     ></script>
     <script src="./extension/prism.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script></script>
+    <script>
+      const zoomBasic = () => {
+        const width = 500,
+          height = 300;
+        const svg = d3
+          .select(".zoomBasic")
+          .append("svg")
+          .attr("width", width)
+          .attr("height", height)
+          .style("border", "1px solid gray");
+
+        // 加個圓點點
+        const circle = svg
+          .append("circle")
+          .attr("id", "dot")
+          .attr("cx", 150)
+          .attr("cy", 150)
+          .attr("r", 40)
+          .attr("fill", "#69b3a2");
+
+        // Zoom 事件
+        const zoom = d3
+          .zoom()
+          .extent([
+            [0, 0],
+            [250, 250],
+          ])
+          .scaleExtent([-5, 5])
+          .duration(600)
+          .on("zoom", function (event) {
+            console.log(event);
+            //這邊決定要放大誰
+            circle.attr("transform", event.transform);
+          });
+
+        svg.call(zoom);
+        //  .on("wheel.zoom", null);
+      };
+
+      zoomBasic();
+
+      const zoomAdjust = () => {
+        const width = 500,
+          height = 400;
+
+        const svg = d3
+          .select(".zoomAdjust")
+          .append("svg")
+          .attr("width", width)
+          .attr("height", height)
+          .style("border", "1px solid gray");
+
+        // 加個圓點點
+        const circle = svg
+          .append("circle")
+          .attr("id", "dot")
+          .attr("cx", 150)
+          .attr("cy", 150)
+          .attr("r", 40)
+          .attr("fill", "#69b3a2");
+
+        // Zoom 事件
+        const zoom = d3.zoom().on("zoom", function (event) {
+          circle.attr("transform", event.transform);
+        });
+
+        svg.call(zoom);
+
+        // 加上reset button
+        const resetBtn = d3
+          .select(".zoomAdjust")
+          .append("div")
+          .append("button")
+          .attr("class", "btn btn-primary")
+          .attr("id", "reset")
+          .text("reset");
+
+        // reset button 觸發
+        resetBtn.on("click", function () {
+          const transform = d3.zoomIdentity.scale(1);
+          svg.call(zoom.transform, transform);
+        });
+
+        // input 輸入 Zoom 的大小
+        const div = d3
+          .select(".zoomAdjust")
+          .append("div")
+          .attr("class", "mt-3")
+          .append("span")
+          .text("輸入縮放倍數(需>1)：");
+
+        const zoomScaleInput = div.append("input").attr("id", "zoomscale");
+        const zoomScaleBtn = div
+          .append("button")
+          .attr("class", "btn btn-primary ms-2")
+          .text("執行");
+
+        // 設定取 value 的值，套用 zoom 的倍數
+        zoomScaleBtn.on("click", function () {
+          const scaleValue = document.getElementById("zoomscale").value;
+          const transform = d3.zoomIdentity.scale(`${scaleValue}`);
+          svg.call(zoom.transform, transform);
+        });
+      };
+
+      zoomAdjust();
+    </script>
   </body>
 </html>
