--- a/24.zoom.html
+++ b/24.zoom.html
@@ -33,7 +33,7 @@
         <h5 class="mt-5">
           <mark>基本縮放</mark>
         </h5>
-        <div class="zoomBasic"></div>
+        <div class="zoomBasic my-3"></div>
         <p class="mt-1 mb-1 fs-6">程式碼</p>
         <pre>
           <code class="language-js line-numbers remove-initial-line-feed">
@@ -43,11 +43,11 @@
       </div>
 
       <!-- 自行調整縮放大小 -->
-      <div>
+      <div class="mb-5">
         <h5 class="mt-5">
           <mark>自行調整縮放大小</mark>
         </h5>
-        <div class="zoomAdjust"></div>
+        <div class="zoomAdjust my-3"></div>
         <p class="mt-1 mb-1 fs-6">程式碼</p>
         <pre>
           <code class="language-js line-numbers remove-initial-line-feed">
@@ -66,8 +66,8 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script>
       const zoomBasic = () => {
-        const width = 500,
-          height = 300;
+        const width = parseInt(d3.select('.zoomBasic').style('width'));
+        const height = 300;
         const svg = d3
           .select(".zoomBasic")
           .append("svg")
@@ -79,12 +79,12 @@
         const circle = svg
           .append("circle")
           .attr("id", "dot")
-          .attr("cx", 150)
-          .attr("cy", 150)
+          .attr("cx", width/2)
+          .attr("cy", height/2)
           .attr("r", 40)
           .attr("fill", "#69b3a2");
 
-        // Zoom 事件
+        // 建立 Zoom 事件
         const zoom = d3
           .zoom()
           .extent([
@@ -93,20 +93,21 @@
           ])
           .scaleExtent([-5, 5])
           .duration(600)
-          .on("zoom", function (event) {
+          .on("zoom",  (event)=> {
             console.log(event);
             //這邊決定要放大誰
             circle.attr("transform", event.transform);
           });
 
-        svg.call(zoom);
+        // 呼叫 Zoom 事件
+        svg.call(zoom)
         //  .on("wheel.zoom", null);
       };
 
       zoomBasic();
 
       const zoomAdjust = () => {
-        const width = 500,
+        const width = parseInt(d3.select('.zoomAdjust').style('width')),
           height = 400;
 
         const svg = d3
@@ -120,49 +121,48 @@
         const circle = svg
           .append("circle")
           .attr("id", "dot")
-          .attr("cx", 150)
-          .attr("cy", 150)
+          .attr("cx",  width/2)
+          .attr("cy", height/2)
           .attr("r", 40)
           .attr("fill", "#69b3a2");
 
         // Zoom 事件
-        const zoom = d3.zoom().on("zoom", function (event) {
+        const zoom = d3.zoom().on("zoom",  (event)=> {
           circle.attr("transform", event.transform);
         });
 
         svg.call(zoom);
 
-        // 加上reset button
+        // 加上 reset button
         const resetBtn = d3
           .select(".zoomAdjust")
-          .append("div")
           .append("button")
-          .attr("class", "btn btn-primary")
+          .attr("class", "btn btn-primary mt-2")
           .attr("id", "reset")
           .text("reset");
 
-        // reset button 觸發
-        resetBtn.on("click", function () {
+        // reset 事件
+        resetBtn.on("click",  ()=> {
           const transform = d3.zoomIdentity.scale(1);
           svg.call(zoom.transform, transform);
         });
 
-        // input 輸入 Zoom 的大小
+        //  輸入縮放大小的 input
         const div = d3
           .select(".zoomAdjust")
           .append("div")
           .attr("class", "mt-3")
           .append("span")
-          .text("輸入縮放倍數(需>1)：");
+          .text("輸入縮放倍數：");
 
         const zoomScaleInput = div.append("input").attr("id", "zoomscale");
         const zoomScaleBtn = div
           .append("button")
           .attr("class", "btn btn-primary ms-2")
-          .text("執行");
+          .text("執行縮放");
 
         // 設定取 value 的值，套用 zoom 的倍數
-        zoomScaleBtn.on("click", function () {
+        zoomScaleBtn.on("click",  ()=> {
           const scaleValue = document.getElementById("zoomscale").value;
           const transform = d3.zoomIdentity.scale(`${scaleValue}`);
           svg.call(zoom.transform, transform);
