--- a/25.brush.html
+++ b/25.brush.html
@@ -28,6 +28,20 @@
 
     <div class="container">
       <h3 class="mt-6 fw-bold">刷子 Brush</h3>
+
+      <div class="mb-5">
+        <h5 class="mt-5">
+          <mark>自行調整縮放大小</mark>
+        </h5>
+        <div class="brush"></div>
+        <p class="mt-1 mb-1 fs-6">程式碼</p>
+        <pre>
+          <code class="language-js line-numbers remove-initial-line-feed">
+
+          </code>
+        </pre>
+      </div>
+     
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -36,6 +50,61 @@
     ></script>
     <script src="./extension/prism.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script></script>
+    <script>
+      const data = [{r:20, x:200, y:120},{r:35, x:350, y:280}]
+
+      // 建立svg
+      const width = parseInt(d3.select('.brush').style('width'));
+      const height = 500
+      const svg = d3.select('.brush')
+              .append('svg')
+              .attr('width', width)
+              .attr('height', height)
+              .style('border', '1px solid gray')
+
+      // 加上點點
+      const dots = svg.selectAll('circle')
+                      .data(data)
+                      .join('circle')
+                      .attr('r', d => d.r)
+                      .attr('cx', d => d.x)
+                      .attr('cy', d => d.y)
+                      .style("fill", "#19d3a2")
+
+      // brush 的功能
+      // 加上event參數，就能用 event.selection
+      // selection會產出一個二維陣列，分別代表`x0`, `x1`, `y0`, `y1`，左上到右下的位置，讓你有辦法重新計算目前位置的extent，進而進行其他操作。
+      const brushed = (event)=>{
+          console.log(event)
+          const extent = event.selection
+          dots.classed('selected', d => {return isBrushed(extent, d.x, d.y)})
+      }
+
+      // 設定圓點是否在brush選到的區塊內
+      const isBrushed = (brush_coors, cx, cy)=>{
+        let x0 = brush_coors[0][0],
+            x1 = brush_coors[1][0],
+            y0 = brush_coors[0][1],
+            y1 = brush_coors[1][1]
+
+          // 如果圓點在brush的範圍內，就會傳true；反之則回傳false
+          console.log(x0 <= cx && cx <= x1 && y0 <= cy && cy <= y1)
+          return x0 <= cx && cx <= x1 && y0 <= cy && cy <= y1; 
+      }
+
+      // 加上brush
+      svg.append("g")
+      .attr("class", "brush")
+      .call(d3.brush()
+            // extent限制刷子的活動區塊，理想是比SVG畫布稍大
+              .extent( [ [0,0], [600,600] ]) 
+              // 綁定 brush 事件
+              .on("start brush", brushed) 
+            )
+
+
+
+
+    </script>
   </body>
 </html>
