pie/donut/scatter

--- a/27.pie-chart.html
+++ b/27.pie-chart.html
@@ -126,7 +126,7 @@
 
       <!-- mouseEvent hover -->
       <div class="my-5">
-        <h5 class="text-center fw-bold">每月財務分配滑鼠互動</h5>
+        <h5 class="text-center fw-bold">每月財務分配-滑鼠互動</h5>
         <div class="expensesChartHover position-relative"></div>
         <p class="mt-1 mb-1 fs-6">程式碼</p>
         <pre>
@@ -154,7 +154,7 @@
 
       <!-- Transition -->
       <div class="my-5">
-        <h5 class="text-center fw-bold">1月、2月財務分配</h5>
+        <h5 class="text-center fw-bold">每月財務分配-1月、2月份資料切換</h5>
         <div class="my-3 d-flex justify-content-center">
           <button
             class="px-4 btn btn-warning me-2"
