--- a/31.bar-chart.html
+++ b/31.bar-chart.html
@@ -220,7 +220,7 @@
             // console.log(d)
             // console.log(d.target.__data__)
             d3.select(this)
-              .attr('fill', 'red')
+              .attr('fill', '#f68b47')
             
             // 加上文字標籤
             svg.append('text')
