--- a/index.html
+++ b/index.html
@@ -405,12 +405,14 @@
         <h2 class="text-center text-darkOrange fw-bold">進階圖表</h2>
         <div class="container flex-wrap d-flex justify-content-center">
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
-            <p>line chart</p>
-            <a href="">
+            <p class="my-1">合併圖表</p>
+            <p>Combined chart</p>
+            <a href="./38.combined-chart.html">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
+            <p class="my-1">合併圖表</p>
             <p>pie chart</p>
             <a href="">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
