--- a/37.multiple-area-chart.html
+++ b/37.multiple-area-chart.html
@@ -28,17 +28,16 @@
 
     <div class="container">
       <h3 class="mt-6 fw-bold">多線折線圖 multiple line chart</h3>
-            <!-- 多線折線圖 -->
-            <div class="my-5">
-              <h5>多線折線圖</h5>
-              <p class="mt-3 text-center">2022年1-8月各觀測站降雨量</p>
-              <div class="multiLineChart"></div>
-              <pre>
-                <code class="language-html line-numbers remove-initial-line-feed">
-                  
-                </code>
-              </pre>
-            </div>
+      <!--  -->
+      <div class="my-5">
+        <p class="mt-3 text-center"></p>
+        <div class=""></div>
+        <pre>
+          <code class="language-html line-numbers remove-initial-line-feed">
+            
+          </code>
+        </pre>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
