--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@
         </div>
       </section>
 
-      <!-- 基礎圖表 -->
+      <!-- 常見圖表 -->
       <section class="container pt-5">
-        <h2 class="text-center text-darkOrange mb-4 fw-bold">基礎圖表</h2>
+        <h2 class="text-center text-darkOrange mb-4 fw-bold">常見圖表</h2>
         <div class="flex-wrap d-flex justify-content-center">
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="mb-1">圓餅圖</p>
@@ -381,29 +381,19 @@
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
-            <p class="mb-1">區域圖</p>
+            <p class="mb-1">面積圖</p>
             <p>Area chart</p>
             <a href="./36.area-chart.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
-            <p class="mb-1">多線區域圖</p>
+            <p class="mb-1">堆疊多面積圖</p>
             <p>multiple area chart</p>
             <a href="./37.multiple-area-chart.html" target="_blank">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
-          <div
-            class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4"
-          ></div>
-        </div>
-      </section>
-
-      <!-- 進階圖表 -->
-      <section class="bg-orange pt-5">
-        <h2 class="text-center text-darkOrange fw-bold">進階圖表</h2>
-        <div class="container flex-wrap d-flex justify-content-center">
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="my-1">合併圖表</p>
             <p>Combined chart</p>
@@ -425,6 +415,9 @@
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
+          <div
+            class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4"
+          ></div>
         </div>
       </section>
     </div>
