--- a/19.responsive.html
+++ b/19.responsive.html
@@ -35,6 +35,13 @@
 
         <p class="mt-2 mb-1 fs-6">程式碼</p>
         <pre>
+          <code class="language-html line-numbers remove-initial-line-feed">
+            &lt;div class=&quot;responsive&quot; 
+                style=&quot;border: 1px solid rgb(96, 96, 96)&quot;&gt;
+            &lt;/div&gt;
+          </code>
+        </pre>
+        <pre>
           <code class="language-js line-numbers remove-initial-line-feed">
             const currentWidth = parseInt(d3.select(".responsive").style("width"));
             const height = 400;
