--- a/24.zoom.html
+++ b/24.zoom.html
@@ -239,6 +239,7 @@
         svg.call(zoom);
 
         // 將svg網x座標移動-80px、y座標移動80px
+        // zoom.translateBy(selection, initialX, initialY)
         zoom.translateBy(svg, -80, 80);
       };
 
