--- a/25.brush.html
+++ b/25.brush.html
@@ -78,7 +78,7 @@
               );
             };
       
-            // 設定圓點是否在brush選到的區塊內
+            // 判斷圓點是否在brush選到的區塊內
             const isBrushed = (brush_coors, cx, cy) => {
               let x0 = brush_coors[0][0],
                 x1 = brush_coors[1][0],
