--- a/27.pie-chart.html
+++ b/27.pie-chart.html
@@ -30,7 +30,9 @@
     <div class="container">
       <h3 class="mt-6 fw-bold">圓餅圖 Pie Chart</h3>
       <div class="my-4">
-        <h5 class="text-center fw-bold">每月財務分配</h5>
+        <h5 class="text-center fw-bold">
+          <mark>每月財務分配</mark>
+        </h5>
         <div class="expensesChart"></div>
         <p class="mt-1 mb-1 fs-6">程式碼</p>
         <pre>
