--- a/index.html
+++ b/index.html
@@ -388,30 +388,16 @@
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
-            <p class="mb-1">堆疊多面積圖</p>
-            <p>multiple area chart</p>
-            <a href="./37.multiple-area-chart.html" target="_blank">
-              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
-            </a>
-          </div>
-          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="my-1">合併圖表</p>
             <p>Combined chart</p>
-            <a href="./38.combined-chart.html">
+            <a href="./37.combined-chart.html">
               <img class="w-80" src="./img/index/bar-line-chart.jpg" />
-            </a>
-          </div>
-          <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
-            <p class="my-1">蜘蛛網圖</p>
-            <p>pie chart</p>
-            <a href="">
-              <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
           <div class="text-center mb-5 px-2 col-12 col-sm-8 col-md-6 col-lg-4">
             <p class="my-1">地圖</p>
             <p>Map</p>
-            <a href="">
+            <a href="./38.map.html">
               <img class="w-80" src="https://fakeimg.pl/300x300/?text=Hello" />
             </a>
           </div>
