--- a/12.helper-function-generator.html
+++ b/12.helper-function-generator.html
@@ -602,7 +602,7 @@
         .line()
         .curve(d3.curveBasis)
         .x((d) => d.x) // 設定x值要抓哪項資料
-        .y((d) => d.y); // 設定y值要抓哪項資料z
+        .y((d) => d.y); // 設定y值要抓哪項資料
 
       d3.selectAll(".curveBasisWrapper")
         .append("path")
